WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133372
REGRESSION (iOS WebKit2): "Find in Page" doesn't work in subframes
https://bugs.webkit.org/show_bug.cgi?id=133372
Summary
REGRESSION (iOS WebKit2): "Find in Page" doesn't work in subframes
Tim Horton
Reported
2014-05-29 00:49:04 PDT
<
rdar://problem/17045070
>
Attachments
patch
(2.97 KB, patch)
2014-05-29 00:54 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-05-29 00:54:31 PDT
Created
attachment 232237
[details]
patch
Tim Horton
Comment 2
2014-05-29 11:07:17 PDT
http://trac.webkit.org/changeset/169455
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug